--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -142,3 +142,44 @@ hr {	border: 0; background-color: white; height: 3px; width: 100%; margin: 0; po
 	@media  @tablet {	position: relative; left: auto; bottom: auto; width: 100%;margin-bottom: 6px;}
 }
 
+
+.awardSection{
+	display: flex;
+	justify-content: space-around;
+	margin-top: 75px;
+	@media @tablet{
+		display: block;
+		padding-bottom: 75px;
+	}
+	.award{
+		width: 30%;
+		vertical-align: top;
+		@media @tablet{
+			display: block;
+			width: 60%;
+			margin: 50px auto;
+		}
+		section{
+			background: white;
+			position: relative;
+			height: 275px;
+			img{
+				position: absolute;
+				width: 65%;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%,-50%);
+			}
+		}
+		footer{
+			font-family: "acumin-pro-semi-condensed", sans-serif;
+		    font-style: normal;
+		    font-weight: 800;
+		    font-size: 14px;
+		    color: white;
+		    padding: 35px;
+		    height: 100px;
+		}
+	}
+}
+
